--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <div class="projects">
             <div>
                 <div class="project-screenshot">
-                    <p>Screenshot of project</p>
+                    <p>Screenshot</p>
+                    <p>of project</p>
                 </div>
                 <div class="project-description">
                     <div>
@@ -57,7 +58,8 @@
 
             <div>
                 <div class="project-screenshot">
-                    <p>Screenshot of project</p>
+                    <p>Screenshot</p>
+                    <p>of project</p>
                 </div>
                 <div class="project-description">
                     <div>
@@ -75,7 +77,8 @@
 
             <div>
                 <div class="project-screenshot">
-                    <p>Screenshot of project</p>
+                    <p>Screenshot</p>
+                    <p>of project</p>
                 </div>
                 <div class="project-description">
                     <div>
@@ -93,7 +96,8 @@
 
             <div>
                 <div class="project-screenshot">
-                    <p>Screenshot of project</p>
+                    <p>Screenshot</p>
+                    <p>of project</p>
                 </div>
                 <div class="project-description">
                     <div>
@@ -111,7 +115,8 @@
 
             <div>
                 <div class="project-screenshot">
-                    <p>Screenshot of project</p>
+                    <p>Screenshot</p>
+                    <p>of project</p>
                 </div>
                 <div class="project-description">
                     <div>
@@ -129,7 +134,8 @@
 
             <div>
                 <div class="project-screenshot">
-                    <p>Screenshot of project</p>
+                    <p>Screenshot</p>
+                    <p>of project</p>
                 </div>
                 <div class="project-description">
                     <div>
