Created & styled header-design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="header-design"></div>
     <header>
         <div class="left-header">
             <img src="./images/pexels-julissa-helmuth-15279810.jpg" alt="A dog.">
