--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
     </section>
 
     <footer>
+        <div class="footer-extend-left"></div>
+        <div class="footer-extend-right"></div>
         <div class="left-footer">
             <h2>Contact me</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, dignissimos.</p>
