--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/my-work.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <div class="header-design"></div>
     <header>
+        <div class="header-extend-left"></div>
+        <div class="header-extend-right"></div>
+
         <div class="left-header">
             <img src="./images/pexels-julissa-helmuth-15279810.jpg" alt="A dog.">
             <p>German Shepherd</p>
