Created picture Switches header img based on res

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <header>
         <div class="header-extend-left"></div>
         <div class="header-extend-right"></div>
+
+        <picture>
+            <source media="(max-width: 768px)" srcset="./images/header-dog-2400.png">
+            <img src="./images/header-dog-3008.jpg" alt="A dog.">
+        </picture>
         
-        <img src="./images/pexels-julissa-helmuth-15279810.jpg" alt="A dog.">
         <p>German Shepherd</p>
 
         <div class="right-header">
