made footer images responsive

--- a/index.html
+++ b/index.html
@@ -192,7 +192,12 @@
                 </svg>
             </div>
         </div>
-        <img src="./images/pexels-k-zoltan-342214.jpg" alt="A dog laying down.">
+
+        <picture>
+            <source media="(max-width: 768px)" srcset="./images/footer-dog-3900.png">
+            <img src="./images/footer-dog-5184.jpg" alt="A dog laying down.">
+        </picture>
+        
     </footer>
 </body>
 </html>
